<resources>
    <string name="app_name">Special Events</string>
    <string name="action_events">Események</string>
    <string name="person_name">Név</string>
    <string name="save_something">Mentés</string>
    <string name="cancel_something">Mégse</string>
    <string name="save_person_dialog_title">Új személy mentése</string>
    <string name="person_list_toolbar_title">Emberek</string>
    <string name="delete">Törlés</string>
    <string name="event_type_description">Esemény típusa</string>
    <string name="save_event_dialog_title">Új esemény mentése</string>
    <string name="edit_event_dialog_title">Esemény szerkesztése</string>
    <string name="month_label">Hónap:</string>
    <string name="day_label">Nap:</string>
    <string name="person_label">Személy:</string>
    <string name="loading">Loading...</string>
    <string name="event_type_label">Esemény:</string>
    <string name="birthday">Születésnap</string>
    <string name="nameday">Névnap</string>
    <string name="anniversary">Évforduló</string>
    <string name="add_plus_person"><u>Új személy hozzáadása</u></string>
    <string name="remove_plus_person"><u>Személy eltávolítása</u></string>
    <string name="jan">Január</string>
    <string name="febr">Február</string>
    <string name="marc">Március</string>
    <string name="apr">Április</string>
    <string name="mai">Május</string>
    <string name="jun">Június</string>
    <string name="jul">Július</string>
    <string name="aug">Augusztus</string>
    <string name="sept">Szeptember</string>
    <string name="oct">Október</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="edit">Módosítás</string>
    <string name="ok">Igen</string>
    <string name="confirm_delete_event_message">Biztosan törli az eseményt?</string>
    <string name="confirm_delete_person_message">Biztosan törli a személyt?</string>
    <string name="gift_hints">Ajándék ötletek</string>
    <string name="edit_person_dialog_title">Személy adatainak szerkesztése</string>
    <string name="save_gift_dialog_title">Új ajándék hozzáadása</string>
    <string name="edit_gift_dialog_title">Ajándék adatainak szerkesztése</string>
    <string name="confirm_delete_gift_message">Biztosan törli az ajándékot?</string>
    <string name="gift_activity_title_last_part">" ajándékötletei"</string>
    <string name="person_events_activity_title_last_part">" ünnepei"</string>
</resources>
