<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:isScrollContainer="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/person_selector_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

        <ImageView
            android:id="@+id/new_event_dialog_plus_person_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_add_circle_green_light_24dp"
            android:contentDescription="@string/add_plus_person" />

        <ImageView
            android:id="@+id/new_event_dialog_minus_person_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/ic_remove_circle_red_24dp"
            android:contentDescription="@string/remove_plus_person" />

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/event_type_label"/>
        <Spinner
            android:id="@+id/new_event_dialog_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/month_label"/>
        <Spinner
            android:id="@+id/new_event_dialog_month_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/day_label"/>
        <Spinner
            android:id="@+id/new_event_dialog_day_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>